fixed some dark mode related issues

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -138,7 +138,9 @@
   background: rgba(255, 255, 255, 0.6);
   filter: blur(750px);
 }
-/* Autofill styles for Chrome, Safari, and Opera */
+
+
+/* Light mode autofill styles */
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -148,11 +150,20 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
-  /* -webkit-text-fill-color: #ffffff !important; */
-  /* -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important; For light mode */
-  transition: background-color 5000s ease-in-out 0s !important;
+  -webkit-text-fill-color: #000000 !important; /* Text color */
+  -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important; /* Background color */
 }
 
+/* Firefox light mode autofill styles */
+input:-moz-autofill,
+textarea:-moz-autofill,
+select:-moz-autofill {
+  background-color: #ffffff !important; /* Background color */
+  color: #000000 !important; /* Text color */
+}
+
+
+/* Dark mode autofill styles */
 .dark input:-webkit-autofill,
 .dark input:-webkit-autofill:hover,
 .dark input:-webkit-autofill:focus,
@@ -162,17 +173,19 @@ select:-webkit-autofill:focus {
 .dark select:-webkit-autofill,
 .dark select:-webkit-autofill:hover,
 .dark select:-webkit-autofill:focus {
-  -webkit-text-fill-color: #FFFFFF !important;
-  -webkit-box-shadow: 0 0 0px 1000px #18202F inset !important; /* For dark mode */
+  -webkit-text-fill-color: #ffffff !important; /* Text color */
+  -webkit-box-shadow: 0 0 0px 1000px #18202F inset !important; /* Background color */
 }
 
-/* Autofill styles for Firefox */
-input:-moz-autofill,
-textarea:-moz-autofill,
-select:-moz-autofill {
-  background-color: transparent !important;
-  color: currentColor !important;
+/* Firefox dark mode autofill styles */
+.dark input:-moz-autofill,
+.dark textarea:-moz-autofill,
+.dark select:-moz-autofill {
+  background-color: #18202F !important; /* Background color */
+  color: #ffffff !important; /* Text color */
 }
+
+
 
 
 /* Custom Select Styles */
